@@ -39,6 +39,10 @@ Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA. 
 extern int errno;
 #endif
 
+#ifdef STRING_WITH_STRINGS
+#include <string.h>
+#include <strings.h>
+#else
 #ifdef HAVE_STRING_H
 #include <string.h>
 #else
@@ -47,6 +51,7 @@ extern int errno;
 #else
 extern char *strchr ();
 extern char *strrchr ();
+#endif
 #endif
 #endif
 
